# src/routes/Userroute.ts
@@ -1,12 +1,40 @@
 import express, { Express, Request, Response } from 'express';
-import {UserRegister,UserLogin,UserRefreshToken, UserLogout, Userdelete} from '../controllers/Usercontrollers';
+import { body } from 'express-validator';
+import { 
+  UserRegister, 
+  UserLogin, 
+  UserRefreshToken, 
+  UserLogout, 
+  Userdelete 
+} from '../controllers/Usercontrollers';
+import { handelValidationError } from "../middleware/ErrorMiddleWare";
 
 const UserRouter = express.Router();
-UserRouter.post('/register', UserRegister);
-UserRouter.post('/login', UserLogin);
-// UserRouter.post('/protect', protectedRoute);
-UserRouter.post('/refresh', UserRefreshToken);
-UserRouter.post('/logout', UserLogout);
-UserRouter.delete('/delete', Userdelete);
-export default UserRouter;
 
+
+const validateRegister = [
+  body('email').isEmail().withMessage('Invalid email address'),
+  body('password').isLength({ min: 6 }).withMessage('Password must be at least 6 characters')
+];
+
+const validateLogin = [
+  body('email').isEmail().withMessage('Invalid email address'),
+  body('password').isLength({ min: 6 }).withMessage('Password must be at least 6 characters')
+];
+
+const validateRefreshToken = [
+  body('refreshToken').notEmpty().withMessage('Refresh token is required')
+];
+
+const validateDelete = [
+  body('userId').notEmpty().withMessage('User ID is required')
+];
+
+
+UserRouter.post('/register', validateRegister, handelValidationError, UserRegister);
+UserRouter.post('/login', validateLogin, handelValidationError, UserLogin);
+UserRouter.post('/refresh', validateRefreshToken, handelValidationError, UserRefreshToken);
+UserRouter.post('/logout', UserLogout);  
+UserRouter.delete('/delete', validateDelete, handelValidationError, Userdelete);
+
+export default UserRouter;
